Corrected the seventh alignment exercise.

--- a/07-flex-layout-2/style.css
+++ b/07-flex-layout-2/style.css
@@ -49,6 +49,8 @@ div {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   width: 300px;
+  padding: 16px;
+  margin: 16px;
 }
 
 .allcards {
